feat(app)!: introducing Next.js 14

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "types/*": ["./@types/*"]
+      "@/*": ["./src/*"]
     },
     "typeRoots": [
       "@types"
