--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_URL=
+API_URL=http://localhost:3000
 EMAIL_SERVER=
 FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
@@ -6,4 +6,4 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 MONGODB_URI=
 NEXTAUTH_SECRET=
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=$API_URL
