--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pas.academy",
+  "name": "pasacademy",
   "description": "Uma plataforma completa sobre o PAS UnB.",
   "author": "eliabexp",
   "private": true,
@@ -10,11 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.18.0",
     "escape-goat": "^4.0.0",
-    "marked": "^9.1.2",
-    "mongoose": "^7.6.3",
-    "next": "13.5.6",
-    "next-auth": "^4.24.3",
+    "marked": "^9.1.4",
+    "marked-katex-extension": "^4.0.3",
+    "mongoose": "^8.0.0",
+    "next": "14.0.1",
+    "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.22.4"
@@ -24,12 +26,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6",
-    "sass": "^1.69.4",
+    "eslint-config-next": "14.0.1",
+    "sass": "^1.69.5",
     "typescript": "^5"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/eliabexp/pas.academy.git"
+    "url": "https://github.com/eliabexp/pasacademy.git"
   }
 }
