--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_URL=http://localhost:3000
+API_URL=http://localhost:3000/api
 FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
@@ -8,5 +8,3 @@ SMTP_USER=
 SMTP_PASSWORD=
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
-WORKOS_CLIENT_ID=
-WORKOS_API_KEY=
