--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,14 +1,15 @@
 {
-    "arrowParens": "always",
-    "bracketSameLine": false,
-    "bracketSpacing": true,
-    "endOfLine": "lf",
-    "jsxSingleQuote": false,
-    "semi": false,
-    "singleQuote": true,
-    "printWidth": 100,
-    "plugins": ["prettier-plugin-tailwindcss"],
-    "quoteProps": "consistent",
-    "tabWidth": 4,
-    "trailingComma": "none"
+  "arrowParens": "always",
+  "bracketSameLine": false,
+  "bracketSpacing": true,
+  "endOfLine": "lf",
+  "jsxSingleQuote": false,
+  "semi": false,
+  "singleQuote": true,
+  "printWidth": 100,
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "quoteProps": "consistent",
+  "tabWidth": 4,
+  "tailwindFunctions": ["tv"],
+  "trailingComma": "none"
 }
