--- a/package.json
+++ b/package.json
@@ -10,45 +10,48 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "@auth/core": "^0.19.0",
-    "@tiptap-pro/extension-mathematics": "^2.5.1",
-    "@tiptap/extension-bubble-menu": "^2.1.13",
-    "@tiptap/extension-character-count": "^2.1.13",
-    "@tiptap/extension-link": "^2.1.13",
-    "@tiptap/extension-placeholder": "^2.1.13",
-    "@tiptap/html": "^2.1.13",
-    "@tiptap/pm": "^2.1.13",
-    "@tiptap/react": "^2.1.13",
-    "@tiptap/starter-kit": "^2.1.13",
-    "@workos-inc/node": "^4.0.0",
+    "@tiptap-pro/extension-mathematics": "^2.6.3",
+    "@tiptap/extension-bubble-menu": "^2.2.0",
+    "@tiptap/extension-character-count": "^2.2.0",
+    "@tiptap/extension-link": "^2.2.0",
+    "@tiptap/extension-placeholder": "^2.2.0",
+    "@tiptap/extension-table": "^2.2.0",
+    "@tiptap/extension-table-cell": "^2.2.0",
+    "@tiptap/extension-table-header": "^2.2.0",
+    "@tiptap/extension-table-row": "^2.2.0",
+    "@tiptap/html": "^2.2.0",
+    "@tiptap/pm": "^2.2.0",
+    "@tiptap/react": "^2.2.0",
+    "@tiptap/starter-kit": "^2.2.0",
     "escape-goat": "^4.0.0",
     "katex": "^0.16.9",
-    "lucide-react": "^0.303.0",
-    "marked": "^11.1.1",
-    "marked-katex-extension": "^4.0.5",
-    "mongoose": "^8.0.3",
-    "next": "14.0.4",
+    "lucide-react": "^0.316.0",
+    "marked": "^11.2.0",
+    "marked-katex-extension": "^5.0.0",
+    "mongoose": "^8.1.1",
+    "next": "14.1.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-variants": "^0.1.19",
+    "tailwind-variants": "^0.1.20",
+    "tiptap-markdown": "^0.8.9",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^1.5.1",
+    "@stylistic/eslint-plugin": "^1.5.4",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.1.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-tailwindcss": "^3.13.1",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.10",
-    "tailwindcss": "^3.4.0",
+    "eslint-plugin-tailwindcss": "^3.14.1",
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "repository": {
