--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -10,6 +10,6 @@
   "plugins": ["prettier-plugin-tailwindcss"],
   "quoteProps": "consistent",
   "tabWidth": 4,
-  "tailwindFunctions": ["tv"],
+  "tailwindFunctions": ["tv", "cva"],
   "trailingComma": "none"
 }
