--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
-    "@react-email/components": "^0.0.14",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-email/components": "^0.0.15",
     "@react-email/render": "^0.0.12",
-    "@tiptap-pro/extension-file-handler": "^2.6.5",
-    "@tiptap-pro/extension-mathematics": "^2.6.5",
+    "@tiptap-pro/extension-file-handler": "^2.7.5",
+    "@tiptap-pro/extension-mathematics": "^2.7.5",
     "@tiptap/extension-bubble-menu": "^2.2.2",
     "@tiptap/extension-character-count": "^2.2.2",
     "@tiptap/extension-image": "^2.2.2",
@@ -41,15 +42,14 @@
     "@tiptap/starter-kit": "^2.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "escape-goat": "^4.0.0",
     "katex": "^0.16.9",
-    "lucide-react": "^0.331.0",
+    "lucide-react": "^0.336.0",
     "marked": "^12.0.0",
     "marked-katex-extension": "^5.0.1",
-    "mongoose": "^8.1.2",
+    "mongoose": "^8.2.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
-    "nodemailer": "^6.9.9",
+    "nodemailer": "^6.9.10",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.2",
@@ -69,7 +69,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-tailwindcss": "^3.14.2",
+    "eslint-plugin-tailwindcss": "^3.14.3",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
