--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
@@ -43,7 +44,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "katex": "^0.16.9",
-    "lucide-react": "^0.336.0",
+    "lucide-react": "^0.338.0",
     "marked": "^12.0.0",
     "marked-katex-extension": "^5.0.1",
     "mongoose": "^8.2.0",
@@ -53,7 +54,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.2",
-    "sonner": "^1.4.0",
+    "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
     "tailwind-variants": "^0.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -66,7 +67,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-tailwindcss": "^3.14.3",
