--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "@google-cloud/storage": "^7.7.0",
+    "@casl/ability": "^6.7.0",
+    "@google-cloud/storage": "^7.9.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -21,6 +23,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -30,6 +33,7 @@
     "@tiptap-pro/extension-mathematics": "^2.7.5",
     "@tiptap/extension-bubble-menu": "^2.2.2",
     "@tiptap/extension-character-count": "^2.2.2",
+    "@tiptap/extension-heading": "^2.2.4",
     "@tiptap/extension-image": "^2.2.2",
     "@tiptap/extension-link": "^2.2.2",
     "@tiptap/extension-placeholder": "^2.2.2",
@@ -44,36 +48,36 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "katex": "^0.16.9",
-    "lucide-react": "^0.344.0",
-    "marked": "^12.0.0",
+    "lucide-react": "^0.363.0",
+    "marked": "^12.0.1",
     "marked-katex-extension": "^5.0.1",
-    "mongoose": "^8.2.0",
-    "next": "14.1.1",
-    "next-themes": "^0.2.1",
-    "nodemailer": "^6.9.11",
+    "mongoose": "^8.2.3",
+    "next": "14.1.4",
+    "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.2",
-    "sonner": "^1.4.3",
-    "tailwind-merge": "^2.2.1",
-    "tailwind-variants": "^0.2.0",
+    "sharp": "^0.33.3",
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^2.2.2",
+    "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "tiptap-markdown": "^0.8.9",
+    "tiptap-markdown": "^0.8.10",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^1.6.3",
+    "@stylistic/eslint-plugin": "^1.7.0",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-tailwindcss": "^3.14.3",
-    "postcss": "^8.4.35",
+    "eslint-config-next": "14.1.4",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
